<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@color/color7"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bievenido_a"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:textSize="30dp"
        android:textStyle="bold"/>



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/log"
        android:layout_marginTop="300dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/animationView"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/BtnUsuario"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/BtnUsuario"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/color6"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/BtnAdmin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/BtnAdmin"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/color6" />
    </LinearLayout>

</RelativeLayout>